# Chess-Master

./: .gitignore  .gitmodules
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request-기능-개발-템플릿-.md
BE/: CMakeLists.txt  README.md  k6test.js
BE/config/: config.h
BE/data/: user_image.txt
BE/data/game/1/: chat.txt  history.txt
BE/libs/cJSON/: CMakeLists.txt  Makefile  README.md  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h  test.c
BE/libs/cJSON/.github/workflows/: CI.yml
BE/libs/cJSON/fuzzing/: afl.c
BE/libs/cJSON/tests/: cjson_add.c  common.h  compare_tests.c  json_patch_tests.c  minify_tests.c  misc_tests.c  misc_utils_tests.c  old_utils_tests.c  parse_array.c  parse_examples.c  parse_hex4.c  parse_number.c  parse_object.c  parse_string.c  parse_value.c  parse_with_opts.c  print_array.c  print_number.c  print_object.c  print_string.c  print_value.c  readme_examples.c
BE/libs/cJSON/tests/unity/examples/example_3/helper/: UnityHelper.c
BE/libs/cJSON/tests/unity/extras/fixture/src/: unity_fixture.c  unity_fixture.h
BE/src/: main.c
BE/src/admin/: admin.c  admin.h  room_manage.c  server_info.c
BE/src/auth/: auth.c  auth.h  user_join.c  user_login.c
BE/src/chat/: chat.c  chat.h  get_message.c  send_message.c
BE/src/game/: forfeit.c  game.c  game.h  game_thread.c  get_game_history.c  get_game_status.c  get_user_game_history.c  move_piece.c  start_game.c
BE/src/image/: image.c  image.h
BE/src/record/: record.h
BE/src/room/: create_room.c  get_room_list.c  get_room_status.c  join_room.c  leave_room.c  room.c  room.h
BE/src/server/: handler.c  handler.h  server.c  server.h
BE/src/utils/: db.h  utils.c  utils.h
FE/: README.md  index.html  package-lock.json  package.json  vite.config.js
FE/src/: App.jsx
FE/src/components/: Chessboard.jsx
FE/src/pages/: GameHistory.jsx  GameListPage.jsx  GamePage.jsx  GameRoom.jsx  GameStart.jsx  LoginPage.jsx
FE/src/services/: authService.js  gameApi.js  gameService.js
FE/src/styles/: Chessboard.styles.js  GameHistory.styles.js  GameListPage.styles.js  GamePage.styles.js  GameRoom.styles.js  GameStart.styles.js  LoginPage.styles.js
admin_client/: README.MD  admin.c
